hospital handlers docs upd
